# agencia-fastapi-backend

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  hello.py  pyproject.toml  sonar-project.properties
src/app/: auth.py  camunda.py  config.py  database.py  dependencies.py  info.py  main.py
src/app/models/: category.py  hero.py  item.py  power.py  tag.py  team.py  user.py  user_item.py  weapon.py
src/app/routers/: categories.py  heroes.py  items.py  powers.py  tags.py  teams.py  users.py  weapons.py
tests/models/: hero_test.py
