[project]
name = "agencia-fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[full]>=0.115.6",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
lint = [
    "ruff>=0.8.4",
]
dev = [
    "pip>=24.3.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "src/tests"
