[project]
name = "agencia-fastapi-backend"
version = "0.1.0"
description = "FastAPI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[all]>=0.115.6",
    "mysqlclient>=2.2.6",
    "psycopg2>=2.9.10",
    "pycamunda>=0.6.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pip>=24.3.1",
]
lint = [
    "ruff>=0.8.4",
]
test = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"

[tool.uv]
default-groups = ["dev", "lint", "test"]